--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "bcrypt": "^3.0.2",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "jsonwebtoken": "^8.4.0",
         "mongoose": "^5.3.13",
         "mongoose-unique-validator": "^2.0.2",
         "moongoose": "0.0.5",
